# sge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SGE.targets  SGECore.sln  imgui.ini.example  package-lock.json  package.json
.github/workflows/: build.yml
assets/: .gitignore
assets/assemblies/: .gitignore  SGE.targets
assets/scenes/: example.sgescene
assets/shaders/: default.hlsl  grid.hlsl
assets/template/: Assets.sgeregistry  ScriptAssembly.csproj  Template.sgeproject
cmake/: FindAftermath.cmake  FindD3D12.cmake  FindDotnetCore.cmake  FindMSBuild.cmake  FindMono.cmake  glibc.cmake
csharp/: Directory.Build.props  csharp.sln
csharp/SGE.Scriptcore/: Application.cs  Asset.cs  GUID.cs  Helpers.cs  Image.cs  Input.cs  InternalCalls.cs  Log.cs  SGE.Scriptcore.csproj  Scene.cs  Shader.cs  Shape.cs  Sound.cs  Texture.cs  Window.cs  (+3 more)
debugger/: DebuggerFrontend.cs  Log.cs  ObjectRegistry.cs  Program.cs  ProtocolObjects.cs  README.md  SGE.Debugger.csproj  Session.cs  Utilities.cs
example-scripts/: CMakeLists.txt  CameraScript.cs  CollisionListener.cs  README  example-scripts.csproj
launcher/: CMakeLists.txt  launcher.cpp  launcher_layer.cpp  launcher_layer.h
sandbox/: CMakeLists.txt  main.cpp
sandbox-project/: ScriptAssembly.csproj  assets.sgeregistry  sandbox.sgeproject
scriptcore/: Asset.cs  CMakeLists.txt  Entity.cs  Event.cs  GUID.cs  Helpers.cs  Input.cs  InternalCalls.cs  KeyCode.cs  Log.cs  Prefab.cs  Scene.cs  Script.cs  ScriptAttributes.cs  Shader.cs  TestClass.cs  Texture.cs  Timestep.cs  Vector2.cs  Vector3.cs  Vector4.cs  scriptcore.csproj
scriptcore/Components/: BoxColliderComponent.cs  CameraComponent.cs  Component.cs  RigidBodyComponent.cs  ScriptComponent.cs  SpriteRendererComponent.cs  TagComponent.cs  TransformComponent.cs
scriptcore/Events/: InputEvents.cs  MiscEvents.cs  WindowEvents.cs
scripts/: README  install_vulkan_sdk.py
setup/: Setup.sln
sge/: CMakeLists.txt  sge.h  sge_config.h.in  sgepch.h
sge/src/: ref.h  sge.h  sgepch.h
sge/src/core/: application.cpp
sge/src/sge/: ref.h
sge/src/sge/asset/: asset.h  asset_manager.cpp  asset_manager.h  asset_registry.cpp  asset_registry.h  asset_serializers.cpp  asset_serializers.h  json.cpp  json.h  project.cpp  project.h  sound.cpp  sound.h
sge/src/sge/core/: application.cpp  application.h  directory_watcher.cpp  directory_watcher.h  environment.cpp  environment.h  guid.cpp  guid.h  input.cpp  input.h  key_codes.h  layer.h  layer_stack.cpp  layer_stack.h  main.h  meta_register.h  window.cpp  window.h
sge/src/sge/events/: event.h  input_events.h  window_events.h
sge/src/sge/imgui/: imgui_backend.cpp  imgui_backend.h  imgui_extensions.cpp  imgui_extensions.h  imgui_layer.cpp  imgui_layer.h  popup_manager.cpp  popup_manager.h
sge/src/sge/platform/desktop/: desktop_imgui_backend.cpp  desktop_imgui_backend.h  desktop_window.cpp  desktop_window.h
sge/src/sge/platform/directx/: directx_base.h  directx_command_list.cpp  directx_command_list.h  directx_command_queue.cpp  directx_command_queue.h  directx_constant_buffer.cpp  directx_constant_buffer.h  directx_context.cpp  directx_context.h  directx_framebuffer.cpp  directx_framebuffer.h  directx_image.cpp  directx_image.h  directx_imgui_backend.cpp  directx_imgui_backend.h  directx_index_buffer.cpp  directx_index_buffer.h  directx_pipeline.cpp  directx_pipeline.h  directx_renderer.cpp  directx_renderer.h  directx_shader.cpp  directx_shader.h  directx_swapchain.cpp  directx_swapchain.h  directx_texture.cpp  directx_texture.h  directx_vertex_buffer.cpp  directx_vertex_buffer.h
sge/src/sge/platform/linux/: linux_environment.cpp  linux_file_dialogs.cpp
sge/src/sge/platform/macosx/: macosx_file_dialogs.mm
sge/src/sge/platform/vulkan/: vulkan_allocator.cpp  vulkan_allocator.h  vulkan_base.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_list.cpp  vulkan_command_list.h  vulkan_command_queue.cpp  vulkan_command_queue.h  vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_imgui_backend.cpp  vulkan_imgui_backend.h  vulkan_index_buffer.cpp  vulkan_index_buffer.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.h  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.h
sge/src/sge/platform/windows/: windows_environment.cpp  windows_environment.h  windows_file_dialogs.cpp
sge/src/sge/renderer/: command_list.h  command_queue.cpp  command_queue.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  pipeline.cpp  pipeline.h  render_pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_internals.cpp  shader_internals.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
sge/src/sge/scene/: components.cpp  components.h  editor_camera.cpp  editor_camera.h  entity.h  entity_script.h  prefab.cpp  prefab.h  runtime_camera.cpp  runtime_camera.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  shape.cpp  shape.h
sge/src/sge/script/: garbage_collector.cpp  garbage_collector.h  internal_calls.cpp  internal_calls.h  mono_include.h  property_handlers.cpp  script_engine.cpp  script_engine.h  script_helpers.cpp  script_helpers.h  state_preserver.cpp  state_preserver.h  value_wrapper.h
sgm/: CMakeLists.txt
sgm/src/: editor_layer.cpp  editor_layer.h  editor_scene.cpp  editor_scene.h  icon_directory.cpp  icon_directory.h  main.cpp  panel.h  sgm.cpp  sgm.h  sgmpch.h  texture_cache.cpp  texture_cache.h
sgm/src/panels/: content_browser_panel.cpp  editor_panel.cpp  panels.h  renderer_info_panel.cpp  scene_hierarchy.cpp  scene_hierarchy_panel.cpp  viewport_panel.cpp
tools/: CMakeLists.txt  embed_type_faces.cpp  include.h  utils.h
(+33 files in other folders)
